--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "iframe-js",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Post-message-Iframe： 解决 IFrame 通信；优雅的使用 PostMessage",
   "repository": "https://github.com/1503963513/iFramejs",
-  "main": "Iframe.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
